<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".activities.RegistrationActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressCircular"
        android:layout_width="match_parent"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBackToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:outlineProvider="none"
                app:backgroundTint="@color/transparent"
                app:icon="@drawable/ic_arrow_back_white_36dp"
                app:iconTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="@+id/imgLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/mycvlogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:textStyle="italic|bold"
                android:textColor="@color/primary"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayoutFullname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/fullname"
                android:outlineProvider="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:boxStrokeErrorColor="@color/error"
                app:errorIconTint="@color/error"
                app:errorTextColor="@color/error"
                app:errorIconDrawable="@null"
                app:layout_constraintTop_toBottomOf="@+id/tvSignUp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rGrGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLayoutFullname">

                <RadioButton
                    android:id="@+id/rBtnMale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/primary"
                    android:text="@string/male"
                    android:textColor="@color/gray" />

                <RadioButton
                    android:id="@+id/rBtnFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:buttonTint="@color/primary"
                    android:text="@string/female"
                    android:textColor="@color/gray" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayoutDoB"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/DoB"
                android:outlineProvider="none"
                app:boxStrokeErrorColor="@color/error"
                app:errorIconTint="@color/error"
                app:errorTextColor="@color/error"
                app:layout_constraintEnd_toEndOf="parent"
                app:errorIconDrawable="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rGrGender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDoB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayoutCellphone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/cellphone"
                android:outlineProvider="none"
                app:boxStrokeErrorColor="@color/error"
                app:errorIconTint="@color/error"
                app:errorTextColor="@color/error"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLayoutDoB">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCellphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayoutEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/email"
                android:outlineProvider="none"
                app:boxStrokeErrorColor="@color/error"
                app:errorIconTint="@color/error"
                app:errorTextColor="@color/error"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLayoutCellphone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSignUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayoutSignUpPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:outlineProvider="none"
                app:boxStrokeErrorColor="@color/error"
                app:errorIconTint="@color/error"
                app:errorTextColor="@color/error"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLayoutEmail"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSignUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorIconDrawable = "@null"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayoutSignUpConfirmPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/confirmPassword"
                android:outlineProvider="none"
                app:boxStrokeErrorColor="@color/error"
                app:errorIconTint="@color/error"
                app:errorTextColor="@color/error"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLayoutSignUpPassword"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmSignUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="15dp"
                android:text="@string/signUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLayoutSignUpConfirmPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>